[package]
name = "rust_news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
rss = "1.10"
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0" }
chrono = "0.4"
chatgpt_rs = "1.1.10"